update profile for add new profile

--- a/profile.html
+++ b/profile.html
@@ -1,1 +1,4 @@
-
+<a href="https://megustaviajar.hatenablog.com/entry/form">お問い合わせフォーム</a>
+<a href="https://megustaviajar.hatenablog.com/entry/privacypolicy">プライバシーポリシー</a><br>
+メール
+iamtakahisayoshida@gmail.com
